--- a/The_Band/index.html
+++ b/The_Band/index.html
@@ -60,7 +60,14 @@
         </div>
 
         <div id="content">
+            <div id="content-section">
+                <div class="content-heading">
 
+                </div>
+                <div class="content-subheading">
+
+                </div>
+            </div>
         </div>
 
         <div id="footer">
