--- a/The_Band/index.html
+++ b/The_Band/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div id="content">
-            <div id="content-section">
+            <div class="content-section">
                 <!-- about -->
                 <h1 class="content-heading">
                     THE BAND
@@ -73,19 +73,46 @@
                     ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                     consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
+
+                <div class="member-list">
+                    <div class="member-item">
+                        <div class="member-name">Name</div>
+                        <img src="./Assets/image/team/memeber.jpg" alt="" class="member-img">
+                    </div>
+                    <div class="member-item">
+                        <div class="member-name">Name</div>
+                        <img src="./Assets/image/team/memeber.jpg" alt="" class="member-img">
+                    </div>
+                    <div class="member-item">
+                        <div class="member-name">Name</div>
+                        <img src="./Assets/image/team/memeber.jpg" alt="" class="member-img">
+                    </div>
+                    <div class="clear"></div>
+
+                </div>
             </div>
             <!-- tour -->
-            <div id="content-section">
-                <h1 class="content-heading">
-                    TOUR DATES
-                </h1>
-                <p class="content-sub-heading">
-                    Remember to book your tickets!
-                </p>
+            <div class="tour-section">
+                <div class="content-section">
+                    <h1 class="content-heading text-white">
+                        TOUR DATES
+                    </h1>
+                    <p class="content-sub-heading text-white">
+                        Remember to book your tickets!
+                    </p>
+
+                    <ul class="tour-list">
+                        <li>September <span class="sold-out-ticket">Sold out</span> </li>
+                        <li>October <span class="sold-out-ticket">Sold out</span> </li>
+                        <li>November <span class="quality-ticket">3</span></li>
+                    </ul>
+
+                </div>
 
             </div>
+
             <!--  -->
-            <div id="content-section">
+            <div class="content-section">
                 <h1 class="content-heading">
                     CONTACT
                 </h1>
